# centipede

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  launch.sh  run-clang-format.sh  run-clang-tidy.sh
code/: Centipede.cpp  Centipede.hpp  Engine.cpp  Engine.hpp  Laser.cpp  Laser.hpp  Mushrooms.cpp  Mushrooms.hpp  Player.cpp  Player.hpp  Settings.hpp  Spider.cpp  Spider.hpp  TextureHolder.cpp  TextureHolder.hpp  TextureManager.cpp  TextureManager.hpp  main.cpp
shaders/: mushroom.frag
src/: Centipede.cpp  Centipede.hpp  Engine.cpp  Engine.hpp  Laser.cpp  Laser.hpp  Mushrooms.cpp  Mushrooms.hpp  Player.cpp  Player.hpp  Settings.hpp  Spider.cpp  Spider.hpp  TextureManager.cpp  TextureManager.hpp  main.cpp
